Prepare to hide read items.
I don't want all the read folders and feed to show up in the app. I'm not yet sure how to hide
the read parts (I guess I have to remove the parts form the JSON right after loading the
feed list from goread...).

Later on a new preference will toggle this behavior.